<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FluffyMood</string>

    <!-- Bottom Navigation Bar -->
    <string name="navigation_home">홈</string>
    <string name="navigation_analysis">분석</string>
    <string name="navigation_chat">케어봇</string>
    <string name="navigation_mypage">마이페이지</string>

    <!-- Common -->
    <string name="next">다음</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="complete">완료</string>
    <string name="save">저장</string>
    <string name="delete">삭제</string>
    <string name="select">선택</string>
    <string name="cancel">취소</string>

    <!-- Day of Week -->
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="sunday">일</string>

    <!-- Splash -->
    <string name="splash_text_1">나에 대해 알아가는 시간,\n지금 FluffyMood를 시작해보세요!</string>

    <!-- Permission -->
    <string name="permission_text_1">앱 사용을 위해\n접근 권한을 허용해주세요.</string>
    <string name="permission_text_2">필수 및 선택 권한 허용</string>
    <string name="permission_text_3">위치 권한 (필수)</string>
    <string name="permission_text_4">정확한 위치 설정으로 현 위치 파악</string>
    <string name="permission_text_5">활동 권한 (필수)</string>
    <string name="permission_text_6">사용자의 움직임을 측정</string>
    <string name="permission_text_7">알림 권한 (선택)</string>
    <string name="permission_text_8">실시간 트래킹 서비스 및 이벤트 알림</string>
    <string name="permission_text_9">선택 권한의 경우 허용하지 않아도 서비스를 사용할 수 있으나\n일부 서비스 이용이 제한될 수 있습니다.</string>
    <string name="permission_text_10">시작하기</string>
    <string name="permission_text_11">권한 허용</string>
    <string name="permission_text_12">전화 권한 (필수)</string>
    <string name="permission_text_13">사용자의 전화 시간 및 횟수 측정</string>
    <string name="permission_text_14">카메라 권한 (선택)</string>
    <string name="permission_text_15">AR 화상 채팅 서비스 이용</string>

    <!-- Login -->
    <string name="login_text_1">로그인</string>
    <string name="login_text_2">이메일</string>
    <string name="login_text_3">이메일 입력</string>
    <string name="login_text_4">비밀번호</string>
    <string name="login_text_5">비밀번호 입력</string>
    <string name="login_text_6">아이디 또는 비밀번호가 일치하지 않습니다.</string>

    <!-- Register -->
    <string name="register_text_1">회원가입</string>
    <string name="register_text_2">서비스 이용 및 약관 동의</string>
    <string name="register_text_3">약관에 동의해 주세요.</string>
    <string name="register_text_4">모두 동의</string>
    <string name="register_text_5">개인정보 수집 및 이용 제공 동의</string>
    <string name="register_text_6">민감정보 제공 동의</string>
    <string name="register_text_7">(선택) 개인정보 제3자 제공 동의</string>
    <string name="register_text_8">비밀번호 확인</string>
    <string name="register_text_9">영문, 숫자, 특수기호 포함하여 8자리 이상</string>
    <string name="register_text_10">비밀번호가 일치하지 않습니다.</string>
    <string name="register_text_11">이름</string>
    <string name="register_text_12">홍길동</string>
    <string name="register_text_13">생일</string>
    <string name="register_text_14">성별</string>
    <string name="register_text_15">남성</string>
    <string name="register_text_16">여성</string>
    <string name="register_text_17">선택하지 않음</string>
    <string name="register_text_18">1970.01.01</string>
    <string name="register_text_19">주소</string>
    <string name="register_text_20">주소 입력 (현재 살고 있는 곳)</string>
    <string name="register_text_21">검색</string>

    <!-- Main - Home -->
    <string name="home_text_1">오늘의 건강 점수는?</string>
    <string name="home_text_2">실시간 생활습관 측정</string>
    <string name="home_text_3">밝기</string>
    <string name="home_text_4">실시간 트래킹 기능이 꺼져 있습니다.\n[마이페이지 > 계정 관리] 에서 기능을 활성화 해주세요.</string>
    <string name="home_text_5">지금 이 순간, 기분이 어떠신가요?</string>
    <string name="home_text_6">추천 활동</string>
    <string name="home_text_7">행복 점수 추이</string>
    <string name="home_text_8">행복 점수는 핸드폰 센서 데이터로 수집된 정보를 바탕으로 산출됩니다.\n활동량, 핸드폰 사용 시간, 생활의 규칙성, 빛 노출, 얼마나 많은 장소에 방문했는지를 분석하여 점수로 알려드립니다.</string>
    <string name="home_text_9"></string>
    <string name="home_text_10"></string>

    <!-- Home - Log -->
    <string name="log_text_1">스크린 타임</string>
    <string name="log_text_2">화면 깨우기</string>
    <string name="log_text_3">걸음</string>
    <string name="log_text_4">조도</string>
    <string name="log_text_5">이동 경로</string>
    <string name="log_text_6">1일</string>
    <string name="log_text_7">1주일</string>
    <string name="log_text_8">통화 시간</string>
    <string name="log_text_9">통화 횟수</string>
    <string name="log_text_10">로그</string>
    <string name="log_text_11">날짜를 선택해주세요.</string>

    <!-- Main - Analysis -->
    <string name="analysis_text_1">선택한 날짜의 데이터가 없습니다.\n날짜를 변경해 주세요.</string>
    <string name="analysis_text_2">빛 노출량</string>
    <string name="analysis_text_3">밖보다\n집이 좋아!</string>
    <string name="analysis_text_4">집보다\n밖이 좋아!</string>
    <string name="analysis_text_5">내 MBTI는\n혹시 P?</string>
    <string name="analysis_text_6">내 MBTI는\n혹시 J?</string>
    <string name="analysis_text_7">나는 오늘 약 %d%% 만큼 집에 있었어요.</string>
    <string name="analysis_text_8">나는 %d%% 만큼 규칙적인 생활을 하고 있어요.</string>
    <string name="analysis_text_9">주간보다 약 %d회 만큼\n야간에 더 많이 걸었어요.</string>
    <string name="analysis_text_10">야간보다 약 %d회 만큼\n주간에 더 많이 걸었어요.</string>
    <string name="analysis_text_11">오늘 하루 동안\n약 %d회 만큼 걸었어요.</string>
    <string name="analysis_text_12">주간보다 약 %d회 만큼\n야간에 더 많이 화면을 깨웠어요.</string>
    <string name="analysis_text_13">야간보다 약 %d회 만큼\n주간에 더 많이 화면을 깨웠어요.</string>
    <string name="analysis_text_14">오늘 하루 동안\n약 %d회 만큼 화면을 깨웠어요.</string>
    <string name="analysis_text_15">주간보다 약 %s 만큼\n야간에 더 오래 핸드폰을 사용했어요.</string>
    <string name="analysis_text_16">야간보다 약 %s 만큼\n주간에 더 오래 핸드폰을 사용했어요.</string>
    <string name="analysis_text_17">오늘 하루 동안\n약 %s 동안 핸드폰을 사용했어요.</string>
    <string name="analysis_text_18">주간보다 약 %s 만큼\n야간에 더 오래 통화 했어요.</string>
    <string name="analysis_text_19">야간보다 약 %s 만큼\n주간에 더 오래 통화 했어요.</string>
    <string name="analysis_text_20">오늘 하루 동안\n약 %s 동안 통화 했어요.</string>
    <string name="analysis_text_21">주간보다 약 %d회 만큼\n야간에 더 많이 통화 했어요.</string>
    <string name="analysis_text_22">야간보다 약 %d회 만큼\n주간에 더 많이 통화 했어요.</string>
    <string name="analysis_text_23">오늘 하루 동안\n약 %d회 만큼 통화 했어요.</string>
    <string name="analysis_text_24">생활의 규칙성</string>
    <string name="analysis_text_25">핸드폰 사용 시간</string>
    <string name="analysis_text_26">활동</string>
    <string name="analysis_text_27">장소의 다양성</string>
    <string name="analysis_text_28">빛 노출량</string>
    <string name="analysis_text_29">AI 분석</string>
    <string name="analysis_text_30">%s님의 AI 분석 결과</string>
    <string name="analysis_text_31">결과 보기</string>
    <string name="analysis_text_32">나는 여기에 이~만큼 머물렀어요</string>
    <string name="analysis_text_33">일상 생활의 규칙성과 일관성을 점수로 나타냅니다. 점수가 높다는 것은 규칙적인 생활을 하고있다는 것입니다. 규칙적인 생활은 스트레스를 줄이고 전반적인 건강을 증진시킬 수 있습니다.</string>
    <string name="analysis_text_34">핸드폰 사용시간을 점수로 나타냅니다. 점수가 높다는 것은 핸드폰 사용량이 적절하다는 것입니다. 과도한 핸드폰 사용은 수면의 질을 떨어뜨리고 집중력을 저하시킬 수 있습니다.</string>
    <string name="analysis_text_35">신체적 활동과 운동이 행복에 미치는 영향을 점수로 나타냅니다. 점수가 높을수록 활동량이 높다는 것입니다. 이는 우울감을 줄이는 데 도움이 됩니다.</string>
    <string name="analysis_text_36">일상에서 다양한 장소를 방문하는 빈도를 점수로 나타냅니다. 점수가 높다는 것은 다양한 장소를 방문하고 있다는 것입니다. 다양한 장소를 방문하는것은 새로운 경험을 제공하고 사회적 관계를 확장하는데 도움이 됩니다.</string>
    <string name="analysis_text_37">빛에 얼마나 노출되는지를 점수로 나타냅니다. 점수가 높을수록 빛을 많이 받은것입니다. 빛에 노출되는것은 멜라토닌 분비를 조절하여 기분을 좋게 하며 에너지를 높이는데 도움이 됩니다.</string>

    <!-- Main - Chat -->
    <string name="chat_text_1">새로운 채팅을 생성하시겠습니까?</string>
    <string name="chat_text_2">핸드폰을 움직여 빈 공간을 찾은 후, 화면을 터치해 주세요.</string>
    <string name="chat_text_3"></string>
    <string name="chat_text_4"></string>
    <string name="chat_text_5"></string>
    <string name="chat_text_6"></string>
    <string name="chat_text_7"></string>
    <string name="chat_text_8"></string>
    <string name="chat_text_9"></string>
    <string name="chat_text_10"></string>

    <!-- Main - My Page -->
    <string name="my_page_text_1">실시간 트래킹</string>
    <string name="my_page_text_2">일반</string>
    <string name="my_page_text_3">프로필 편집</string>
    <string name="my_page_text_4">계정 관리</string>
    <string name="my_page_text_5">이용안내</string>
    <string name="my_page_text_6">이용약관</string>
    <string name="my_page_text_7">개인정보 처리방침</string>
    <string name="my_page_text_8">오픈소스</string>
    <string name="my_page_text_9">앱 사용 권한</string>
    <string name="my_page_text_10">앱 버전</string>
    <string name="my_page_text_11">로그아웃</string>
    <string name="my_page_text_12">본 이용약관(이하 “이용약관”)은 팀 IMP의 FluffyMood 앱 및 관련하여 제공하는 프로그램, 소프트웨어 등(이하 “서비스” 또는 “FluffyMood”) 및 본 이용약관의 적용을 받으며 FluffyMood 앱에서 업로드 및 다운로드 , 공유되는 모든 정보 및 텍스트, 그래픽, 사진, 기타 자료(이하 통칭 “콘텐츠”)에 대한 접근 및 이용에 관한 사항을 규정합니다. 본 이용약관에 동의하지 않는 경우 FluffyMood를 이용할 수 없습니다.</string>
    <string name="my_page_text_13">본 개인정보 처리 방침(이하 “개인정보 처리 방침”)은 팀 IMP의 FluffyMood 앱 및 관련하여 제공하는 프로그램, 소프트웨어 등(이하 “서비스” 또는 “FluffyMood”) 및 본 이용약관의 적용을 받으며 FluffyMood 앱에서 업로드 및 다운로드 , 공유되는 모든 정보 및 텍스트, 그래픽, 사진, 기타 자료(이하 통칭 “콘텐츠”)에 대한 접근 및 이용에 관한 사항을 규정합니다. 본 이용약관에 동의하지 않는 경우 FluffyMood 이용할 수 없습니다.</string>
    <string name="my_page_text_14">팀 IMP(이하 “회사“라고 합니다)는 개인정보보호법 등 관련 법령상의 개인정보보호 규정을 준수하며 회원의 개인정보보호에 최선을 다하고 있습니다. 회사는 개인정보보호법 제23조에 근거하여, 다음과 같이 민감정보 처리에 관한 동의를 받고자 합니다. \n다음의 내용을 자세히 읽어보신 후 동의 여부를 결정하여 주십시오. \n1. 처리하는 민감정보 \n2. 민감정보의 처리목적 \n3. 민감정보의 보유기간 \n가. 정보 주체의 회원 탈퇴일까지 \n4. 동의 거부 시 불이익 안내 \n가. 회원께서는 민감정보의 처리에 대한 동의를 거부할 권리가 있습니다. 다만, 동의를 거부할 경우 서비스 이용제한등의 불이익이 있을 수 있습니다. \n5. 민감정보의 제3자 제공 가. 민감정보를 제공 받는 제3자 : 팀 IMP \n1) 민감정보 제공 목적 : 정신 질환 확률 분석 및 개선 방안 모색 \n2) 민감정보 제공 항목 : 위치, 조도, 걸음 수, 핸드폰 사용 시간 및 깨우기 횟수, 통화 시간 및 횟수 \n3) 민감정보 보유 및 이용기간 : 2년 \n4) 민감정보 제공 거부 시 불이익 : 서비스 이용 제한 \n본인은 본 동의서의 내용을 모두 이해하였으며, 민감정보의 처리에 관한 회원 권리 안내문에 관하여 자 세한 설명을 듣고 내용에 동의합니다.</string>

    <!-- Popup Title -->
    <string name="popup_text_1">권한 거부 시 앱 사용에 제한이 있습니다. 설정에서 권한을 허용해주세요.</string>
    <string name="popup_text_2">위치 권한을 설정에서 항상 허용으로 변경해 주세요.</string>
    <string name="popup_text_3">회원 가입이 완료되었습니다.</string>
    <string name="popup_text_4">회원 정보 수정이 완료되었습니다.</string>
    <string name="popup_text_5">로그아웃 하시겠습니까?</string>
    <string name="popup_text_6">잠시만 기다려 주세요...</string>
    <string name="popup_text_7">저장이 완료되었습니다.</string>
    <string name="popup_text_8"></string>
    <string name="popup_text_9"></string>
    <string name="popup_text_10"></string>

    <!-- unit -->
    <string name="unit_happy_score">%d/100점</string>
    <string name="unit_analysis_score">%d/100</string>
    <string name="unit_hour_minute">%d시간 %d분</string>
    <string name="unit_times">%d번</string>
    <string name="unit_count">%d회</string>
    <string name="unit_steps">%s걸음</string>
    <string name="unit_light">%s (%d lux)</string>

</resources>