<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="30dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_e3e6f0"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:paddingBottom="20dp"
                app:layout_constraintTop_toTopOf="parent">

                <!-- App Title -->
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivAppLogo"
                    android:layout_width="155dp"
                    android:layout_height="56dp"
                    android:layout_marginTop="8dp"
                    android:adjustViewBounds="true"
                    android:paddingTop="3dp"
                    android:src="@drawable/icon_logo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!-- 오늘의 행복 점수 -->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/llScoreBoard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/bg_radius_8_ffffff"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingTop="25dp"
                    android:paddingBottom="25dp"
                    app:layout_constraintTop_toBottomOf="@+id/ivAppLogo">

                    <!-- 날짜 -->
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvScoreDate"
                        style="@style/suitRegular.14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:textColor="@color/black_alpha_60"
                        tools:text="03월 04일" />

                    <!-- 타이틀 -->
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvScoreTitle"
                        style="@style/aggroLight.18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="6dp"
                        android:includeFontPadding="false"
                        android:textColor="@color/black"
                        tools:text="오늘의 행복 점수는?" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="27dp">

                        <!-- progress bar -->
                        <com.imp.presentation.widget.component.CustomCircleBarView
                            android:id="@+id/progressBar"
                            android:layout_width="126dp"
                            android:layout_height="126dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <!-- 이미지 -->
                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/ivScore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_mood_good"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <!-- 점수 -->
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvScore"
                        style="@style/suitSemiBold.18"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:bufferType="spannable"
                        android:includeFontPadding="false"
                        android:textColor="@color/black"
                        tools:text="70/100점" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clContents"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clMain">

                <!-- 실시간 트래킹 -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/clTracking"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <!-- 타이틀 -->
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvTrackingTitle"
                        style="@style/aggroLight.18"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:includeFontPadding="false"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="실시간 트래킹" />

                    <!-- 실시간 트래킹 카드 -->
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:id="@+id/clTrackingCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/bg_radius_8_f7f7f7"
                        android:orientation="vertical"
                        android:paddingStart="16dp"
                        android:paddingTop="20dp"
                        android:paddingEnd="16dp"
                        android:paddingBottom="20dp"
                        app:layout_constraintTop_toBottomOf="@+id/tvTrackingTitle">

                        <!-- Screen Time -->
                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/llScreenTime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvScreenTimeTitle"
                                style="@style/suitRegular.16"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:includeFontPadding="false"
                                android:textColor="@color/black_alpha_60"
                                tools:text="@string/log_text_1" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvScreenTime"
                                style="@style/suitRegular.16"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:includeFontPadding="false"
                                android:textColor="@color/black"
                                tools:text="@string/unit_hour_minute" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <!-- Screen Awake Count -->
                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/llScreenAwake"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvScreenAwakeTitle"
                                style="@style/suitRegular.16"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:includeFontPadding="false"
                                android:textColor="@color/black_alpha_60"
                                tools:text="@string/log_text_2" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvScreenAwake"
                                style="@style/suitRegular.16"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:includeFontPadding="false"
                                android:textColor="@color/black"
                                tools:text="@string/unit_count" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <!-- Step -->
                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/llStep"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvStepTitle"
                                style="@style/suitRegular.16"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:includeFontPadding="false"
                                android:textColor="@color/black_alpha_60"
                                tools:text="@string/log_text_3" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvStep"
                                style="@style/suitRegular.16"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:includeFontPadding="false"
                                android:textColor="@color/black"
                                tools:text="@string/unit_steps" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <!-- Light -->
                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/llLight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvLightTitle"
                                style="@style/suitRegular.16"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:includeFontPadding="false"
                                android:textColor="@color/black_alpha_60"
                                tools:text="@string/home_text_3" />

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvLight"
                                style="@style/suitRegular.16"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:includeFontPadding="false"
                                android:textColor="@color/black"
                                tools:text="@string/unit_light" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <!-- Map -->
                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:id="@+id/llMap"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:orientation="vertical">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tvMapTitle"
                                style="@style/suitRegular.16"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:includeFontPadding="false"
                                android:textColor="@color/black_alpha_60"
                                tools:text="@string/log_text_5" />

                            <!-- Kakao Map View Container -->
                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:id="@+id/clMapContainer"
                                android:layout_width="match_parent"
                                android:layout_height="200dp"
                                android:layout_marginTop="10dp"
                                app:layout_constraintTop_toBottomOf="@+id/tvDate" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>